@startuml

interface DocumentNode{
accept(DocumentVisitor)
}
interface DocumentArray{
getValueList()
getValue(index)
}
interface DocumentObject{
getKeyValueMap()
get(key)
hasKey(key)
}
interface DocumentValue
interface DynamodbAttributeValue{
accept(DynamodbVisitor)
}

DocumentNode <|-- DocumentArray
DocumentNode <|-- DocumentObject
DocumentNode <|-- DocumentValue

DocumentArray <|-- DynamodbList
DocumentArray <|-- DynamodbStringSet
DocumentObject <|-- DynamodbObject
DocumentValue <|-- DynamodbString
DocumentValue <|-- DynamodbNumber
DynamodbAttributeValue <|-- DynamodbList
DynamodbAttributeValue <|-- DynamodbStringSet
DynamodbAttributeValue <|-- DynamodbObject
DynamodbAttributeValue <|-- DynamodbString
DynamodbAttributeValue <|-- DynamodbNumber

@enduml